fix animaton overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 }
 body {
 	scroll-behavior: smooth;
+	padding: 2px;
+	background: #fdd;
 }
 
 p {
